--- a/a11y/index.html
+++ b/a11y/index.html
@@ -2,67 +2,69 @@
 layout: default
 title: Accessibility
 ---
-<div class="row primary">
+
+<div class="bg-primary">
     <div class="sub-heading">
-        <div class="copy">
-            <h2>Why Accessibility?</h2>
+        <div class="text-center p-12">
+            <h2 class="my-0">Why Accessibility?</h2>
         </div>
     </div>
 </div>
-<div class="row secondary">
-    <div class="img-left">
-        <div class="copy">
-            <h3>It benefits everyone.</h3>
+
+<div class="bg-secondary">
+    <div class="flex flex-col items-stretch px-6 py-0 md:flex-row md:items-center md:max-w-3xl md:mx-auto md:my-0 md:p-0">
+        <div class="max-w-2xl md:m-0 md:px-0 md:py-24 md:ml-12 md:order-2">
+            <h3 class="mt-6">It benefits everyone.</h3>
             <p>There’s a good chance that each of us might experience disability, even if temporary, and as a result, exclusion. The colors and contrast may look fine on a large monitor in an office, but could be woefully insufficient outdoors in bright sunlight. By meeting minimum contrast requirements, you improve the experience for all users, regardless of ability.</p>
         </div>
-        <div class="image end">
-            <img alt="original pixel illustration of a hand holding a smart phone. There is obvious glare on the screen." src="/images/glare.png" width="200" height="234">
+        <div class="max-w-full mb-0 md:max-w-sm md:self-end">
+            <img class="max-w-full mx-auto my-6 mb-0 md:block md:my-24 md:mx-0 md:mb-0 md:max-w-none" alt="original pixel illustration of a hand holding a smart phone. There is obvious glare on the screen." src="/images/glare.png" width="200" height="234">
         </div> 
     </div>
 </div>
 
-<div class="row alternate">
-    <div class="img-right">
-        <div class="copy">
-            <h3>It can save you money.</h3>
+<div class="bg-alternate">
+    <div class="flex flex-col items-stretch px-6 py-0 md:flex-row md:items-center md:max-w-3xl md:mx-auto md:my-0 md:p-0">
+        <div class="max-w-2xl md:m-0 md:px-0 md:py-24">
+            <h3 class="mt-6">It can save you money.</h3>
             <p>Considering accessibility from the beginning of your project can save a lot of headaches. Why burn money after the fact fixing accessibility issues? That money could be spent building the next new feature. Including inclusive design expertise in your design process results in experiences that are compliant, low-maintenance, and easily scaled.</p>  
         </div>
-        <div class="image">
-            <img alt="original pixel illustration of a dollar bill burning" src="/images/cashburn.png" width="200" height="213">   
-        </div>
+        <div class="max-w-full md:max-w-sm md:ml-12 md:order-2">
+            <img class="max-w-full mx-auto my-6 md:block md:my-24 md:mx-0 md:max-w-none" alt="original pixel illustration of a dollar bill burning" src="/images/cashburn.png" width="200" height="213">
+        </div> 
     </div>
 </div>
 
-<div class="row secondary">
-    <div class="img-left">
-        <div class="copy">
-            <h3>It can make you money.</h3>
+<div class="bg-secondary">
+    <div class="flex flex-col items-stretch px-6 py-0 md:flex-row md:items-center md:max-w-3xl md:mx-auto md:my-0 md:p-0">
+        <div class="max-w-2xl md:m-0 md:px-0 md:py-24 md:ml-12 md:order-2">
+            <h3 class="mt-6">It can make you money.</h3>
             <p>An estimated 1 in 5 of people has some form of disability. Wouldn’t you want 20% more customers? A non-sighted user who encounters a button that just says "Buy Now!" might be reluctant to click on it&mdash;not being sure what they are about to purchase. Avoiding ambiguous link text and adding labels to inputs is crucial in making user flows simple and painless.</p>
         </div>
-        <div class="image end">
-            <img alt="original pixel art illustration of submit button that says buy now on it. There are dust particles and cobwebs on the button." src="/images/buynow.png" width="200" height="264">
-        </div>
+        <div class="max-w-full mb-0 md:max-w-sm md:self-end">
+            <img class="max-w-full mx-auto my-6 mb-0 md:block md:my-24 md:mx-0 md:mb-0 md:max-w-none" alt="original pixel art illustration of submit button that says buy now on it. There are dust particles and cobwebs on the button." src="/images/buynow.png" width="200" height="264">
+        </div> 
     </div>
 </div>
 
-<div class="row">
-    <div class="img-right">
-        <div class="copy">
-            <h3>It’s not about disability, it’s about access.</h3>
+<div class="bg-white">
+    <div class="flex flex-col items-stretch px-6 py-0 md:flex-row md:items-center md:max-w-3xl md:mx-auto md:my-0 md:p-0">
+        <div class="max-w-2xl md:m-0 md:px-0 md:py-24">
+            <h3 class="mt-6">It’s not about disability, it’s about access.</h3>
             <p>People are not the only users of your site. A search engine is essentially a screen reader user. Optimizing your document structure, and including alternate content for images, can boost your SEO and benefit assistive technology users. </p>
         </div>
-        <div class="image ">
-            <img alt="original pixel art illustration of a broken image icon framed like art on a wall. There is an old lady looking on in somewhat disbelief" src="/images/alt.png" width="275" height="213">
-        </div>
+        <div class="max-w-full md:max-w-sm md:ml-12 md:order-2">
+            <img class="max-w-full mx-auto my-6 md:block md:my-24 md:mx-0 md:max-w-none" alt="original pixel art illustration of a broken image icon framed like art on a wall. There is an old lady looking on in somewhat disbelief" src="/images/alt.png" width="275" height="213">
+        </div> 
     </div>
 </div>
 
-<div class="row inverse">
-    <div class="img-center">
-        <div class="image">
+<div class="bg-black text-white">
+    <div class="flex flex-col items-stretch px-6 py-0 text-center md:flex-col md:items-center md:max-w-2xl md:mx-auto md:my-0 md:p-0">
+        <div class="max-w-full flex flex-col items-center my-8 md:max-w-sm md:pt-0 md:mt-24">
             {% include avatar.html %}
-        </div>
-        <div class="copy">
+        </div> 
+        <div class="max-w-2xl mb-8 md:m-0 md:px-0 md:mb-24 md:max-w-lg">
             <h2>Do You Need an A11y?</h2>
             <p>I can help you make your products and services accessible to the widest possible audience! Contact me, and let's talk!</p>
             {% include contact.html %}
