--- a/work/index.html
+++ b/work/index.html
@@ -2,67 +2,69 @@
 layout: default
 title: Disney
 ---
-<div class="row primary">
+
+<div class="bg-primary">
     <div class="sub-heading">
-        <div class="copy">
-            <h2>Work</h2>
+        <div class="text-center p-12">
+            <h2 class="my-0">Work</h2>
         </div>
     </div>
 </div>
-<div class="row secondary">
-    <div class="img-left">
-        <div class="image">
-            <img alt="Original pixel art illustration of man wearing mickey ears in front of a large monitor. " src="/images/disney.png" width="274" height="171">
+
+<div class="bg-secondary">
+    <div class="flex flex-col items-stretch px-6 py-0 md:flex-row md:items-center md:max-w-3xl md:mx-auto md:my-0 md:p-0">        
+        <div class="max-w-full mb-0 md:max-w-sm">
+            <img class="max-w-full mx-auto my-6 mb-0 md:block md:my-24 md:mx-0 md:max-w-none" alt="Original pixel art illustration of man wearing mickey ears in front of a large monitor. " src="/images/disney.png" width="274" height="171">
         </div> 
-        <div class="copy">
-            <h3>The Enterprise Experience</h3>
+        <div class="max-w-2xl md:m-0 md:px-0 md:py-24 md:ml-12 md:order-2">
+            <h3 class="mt-6">The Enterprise Experience</h3>
             <p>For 15 years, it's been my job to bring modern, consumer-like experiences to enterprise software at Disney. As part of Enterprise Technology, my work touches a large number of Disney employees. I get to work on critical behind-the-scenes magic!</p>
         </div>
     </div>
 </div>
 
-<div class="row alternate">
-    <div class="img-right">
-        <div class="image">
-            <img alt="Original pixel art illustration of a disney cast member taking a selfie" src="/images/castlepic.png" width="148" height="214">
-        </div>
-        <div class="copy">
-            <h3>Mobile First</h3>
+<div class="bg-alternate">
+    <div class="flex flex-col items-stretch px-6 py-0 md:flex-row md:items-center md:max-w-3xl md:mx-auto md:my-0 md:p-0">        
+        <div class="max-w-full mb-0 md:max-w-sm md:ml-12 md:order-2">
+            <img class="max-w-full mx-auto my-6 mb-0 md:block md:my-24 md:mx-0 md:max-w-none" alt="Original pixel art illustration of a disney cast member taking a selfie" src="/images/castlepic.png" width="148" height="214">
+        </div> 
+        <div class="max-w-2xl md:m-0 md:px-0 md:py-24">
+            <h3 class="mt-6">Mobile First</h3>
             <p>Most of my career, I've been enabling a mobile-first workforce through mobile apps and technology. The first mobile enterprise app I created for Disney was for the BlackBerry, and now I make apps for iOS and Android. I introduced Web Standards and semantics to enterprise products, and built some of the first responsive web experiences at Disney.</p> 
         </div>
     </div>
 </div>
 
-<div class="row">
-    <div class="img-left">
-        <div class="image">
-            <img alt="Original pixel art illustration of a portion of a profile page" src="/images/expertise.png" width="200" height="223">   
-        </div>
-        <div class="copy">
-            <h3>Expertise Location</h3>
+<div class="bg-white">
+    <div class="flex flex-col items-stretch px-6 py-0 md:flex-row md:items-center md:max-w-3xl md:mx-auto md:my-0 md:p-0">        
+        <div class="max-w-full mb-0 md:max-w-sm">
+            <img class="max-w-full mx-auto my-6 mb-0 md:block md:my-24 md:mx-0 md:max-w-none" alt="Original pixel art illustration of a portion of a profile page" src="/images/expertise.png" width="200" height="223">
+        </div> 
+        <div class="max-w-2xl md:m-0 md:px-0 md:py-24 md:ml-12 md:order-2">
+            <h3 class="mt-6">Expertise Location</h3>
             <p>In a large company, it can be difficult to locate just the right person. I design products and features that enable employees to find one another easily by expertise, skillset, location and more. These easy-to-use tools are extremely popular, and included in many critical workflows.</p>      
         </div>
     </div>
 </div>
 
-<div class="row secondary">
-    <div class="img-right">
-        <div class="image">
-            <img alt="Original pixel art illustration of a profile page on 2 different devices." src="/images/screenshots.png" width="270" height="327">
-        </div>
-        <div class="copy">
-            <h3>Design Systems</h3>
+<div class="bg-secondary">
+    <div class="flex flex-col items-stretch px-6 py-0 md:flex-row md:items-center md:max-w-3xl md:mx-auto md:my-0 md:p-0">        
+        <div class="max-w-full mb-0 md:max-w-sm md:ml-12 md:order-2">
+            <img class="max-w-full mx-auto my-6 mb-0 md:block md:my-24 md:mx-0 md:max-w-none" alt="Original pixel art illustration of a profile page on 2 different devices." src="/images/screenshots.png" width="270" height="327">
+        </div> 
+        <div class="max-w-2xl md:m-0 md:px-0 md:py-24">
+            <h3 class="mt-6">Design Systems</h3>
             <p>I am responsible for developing and promoting enterprise standards for user experience. I created one of the first pattern libraries at Disney, and now work on the enterprise design system. I foster and create a consistent brand experience that adheres to standards, brings delight, and works everywhere. </p>
         </div>
     </div>
 </div>
 
-<div class="row inverse">
-    <div class="img-center">
-        <div class="image">
+<div class="bg-black text-white">
+    <div class="flex flex-col items-stretch px-6 py-0 text-center md:flex-col md:items-center md:max-w-2xl md:mx-auto md:my-0 md:p-0">
+        <div class="max-w-full flex flex-col items-center my-8 md:max-w-sm md:pt-0 md:mt-24">
             {% include avatar.html %}
-        </div>
-        <div class="copy">
+        </div> 
+        <div class="max-w-2xl mb-8 md:m-0 md:px-0 md:mb-24 md:max-w-lg">
             <h2>Coffee Break?</h2>
             <p>Reach out if you want to know more about what keeps me busy.</p>
             {% include contact.html %}
